--- a/src/pages/page1/index.less
+++ b/src/pages/page1/index.less
@@ -5,3 +5,8 @@
         flex:1
     }
 }
+
+.bgimg {
+    height: 60px;
+    background: url('../../assets/images/wait.png') no-repeat #f0f0f0;
+  }
